--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   iridium_reader_widget:
     path: ./iridium/reader_widget
+  path_provider: ^2.0.10
+  dio: any
 
 
   # The following adds the Cupertino Icons font to your application.
