--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,48 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  iridium_reader_widget:
-    path: ./iridium/reader_widget
+  mno_commons:
+    path: ../iridium/components/commons
+  mno_navigator:
+    path: ../iridium/components/navigator
+  mno_server:
+    path: ../iridium/components/server
+  mno_streamer:
+    path: ../iridium/components/streamer
+  mno_opds:
+    path: ../iridium/components/opds
+  mno_shared:
+    path: ../iridium/components/shared
+  bloc: ^8.0.3
+  cupertino_icons: ^1.0.4
+  dartx: ^1.1.0
+  dfunc: ^0.7.2
+  dio: ^4.0.6
+  fimber: ^0.6.6
+  flutter_bloc: ^8.0.1
+  flutter_fimber: ^0.6.5
+  flutter_font_icons: ^2.2.5
+  flutter_inappwebview: ^5.4.3+7
+  fluttertoast: ^8.0.9
+  google_fonts: ^2.3.2
+  idb_shim: ^2.0.1
+  json_theme: ^4.0.0
+  new_version: ^0.3.0
+  objectdb: ^1.2.1+1
   path_provider: ^2.0.10
-  dio: any
+  permission_handler: ^9.2.0
+  provider: ^6.0.2
+  shared_preferences: ^2.0.15
+  uuid: ^3.0.6
+  xml2json: ^5.3.2
+  flutter_xlider:
+    git:
+      url: https://github.com/Ali-Azmoud/flutter_xlider.git
+      ref: master # branch name
+  md5_file_checksum: 1.0.3
+  flutter_spinkit: ^5.1.0
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
