Got it to push progress to local server

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
       ref: master # branch name
   md5_file_checksum: 1.0.3
   flutter_spinkit: ^5.1.0
-
+  crypto: 3.0.2
 
 
 dev_dependencies:
@@ -93,7 +93,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+    - assets/fonts/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
